Fix transient overlapping adjacent content (https://github.com/woocommerce/woocommerce-admin/pull/7302)
* Overwrite width to auto given transients are displayed fixed

* Add changelog

--- a/plugins/woocommerce-admin/client/layout/transient-notices/style.scss
+++ b/plugins/woocommerce-admin/client/layout/transient-notices/style.scss
@@ -5,6 +5,7 @@
 	bottom: $gap-small;
 	left: $admin-menu-width + $gap;
 	z-index: 99999;
+	width: auto;
 
 	@media ( max-width: 960px ) {
 		left: 50px;
